# secprog2

./: .gitignore  README.md  aufgabe1
TeX/: .sp-praktikum-2-ganske-krieg-ausarbeitung.tex.swp  sp-praktikum-1-ganske-krieg-ausarbeitung.tex  sp-praktikum-2-ganske-krieg-ausarbeitung.tex  sp-praktikum-3-ganske-krieg-ausarbeitung.tex
code/: Aufgabe 1  Aufgabe1.c  hackme  ls.txt  payload.py  payload1.py  shellcode.asm  shellcode.py  sp-praktikum2-ganske-krieg-aufgabe3.py  un1k0d3r-payload-v2.py
code/aufg3/CERT-C-Coding-Standard/: build.sh  cmake-debug.sh
code/aufg3/CERT-C-Coding-Standard/Code/src/: CMakeLists.txt
code/aufg3/CERT-C-Coding-Standard/Code/src/Praktikum3/: CMakeLists.txt  exp37-2-noncompliant.c  exp37-compliant.c  int30-2-compliant.c  int30-2-noncompliant.c  int30-compliant.c  int33-2-compliant.c  int33-compliant.c  int33-noncompliant.c
code/aufg3/CERT-C-Coding-Standard/src/Praktikum3/: CMakeLists.txt  exp37-2-compliant.c  exp37-noncompliant.c  int30-noncompliant.c  int33-2-noncompliant.c  mem31-compliant.c  mem31-noncompliant.c
code/aufg3/delete_old_code/Array/: CMakeLists.txt  arr30-compliant-2.c  arr37-noncompliant.c
code/aufg3/delete_old_code/Environment/: CMakeLists.txt  env30-compliant-1.c  env30-compliant-2.c
code/aufg3/delete_old_code/FloatingPoint/: .flp30-noncompliant.c.swp  flp30-noncompliant.c
code/aufg3/delete_old_code/Integers/: CMakeLists.txt
code/aufg3/delete_old_code/Memory/: CMakeLists.txt  mem33-copy-compliant.c  mem33-copy-noncompliant.c  mem33-storage-duration-compliant.c
code/aufg3/delete_old_code/Preprocessor/: pre31-compliant-1.c
code/aufg3/delete_old_code/Strings/: CMakeLists.txt
code/aufg3/delete_old_code/Testing/: CMakeLists.txt  testing.c
code/old/: hackme.c  sp-praktikum2-ganske-krieg-aufgabe2.py
code/stuff/: EXP37-C_nonkonform.c  MEM31-C_konform.c  MEM31-C_nonkonform.c  secure-c-coding.tgz
code/stuff/CERT-C-Coding-Standard/test/: cmake-debug.sh
code/stuff/CERT-C-Coding-Standard/test/Debug/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
code/stuff/CERT-C-Coding-Standard/test/Debug/Array/: Makefile  cmake_install.cmake
code/stuff/CERT-C-Coding-Standard/test/Debug/Declarations/: Makefile  cmake_install.cmake
code/stuff/CERT-C-Coding-Standard/test/Debug/Environment/: Makefile  cmake_install.cmake
code/stuff/CERT-C-Coding-Standard/test/Debug/FloatingPoint/: Makefile  cmake_install.cmake
code/stuff/CERT-C-Coding-Standard/test/Debug/Integers/: Makefile  cmake_install.cmake
code/stuff/CERT-C-Coding-Standard/test/Debug/Memory/: Makefile
code/stuff/CERT-C-Coding-Standard/test/Debug/Preprocessor/: Makefile  cmake_install.cmake
code/stuff/CERT-C-Coding-Standard/test/Debug/Strings/: Makefile
code/stuff/CERT-C-Coding-Standard/test/Debug/Testing/: Makefile
code/stuff/CERT-C-Coding-Standard/test/src/: CMakeLists.txt
code/stuff/CERT-C-Coding-Standard/test/src/Array/: CMakeLists.txt  arr30-compliant-1.c  arr30-noncompliant.c  arr37-compliant-1.c  arr37-compliant-2.c
code/stuff/CERT-C-Coding-Standard/test/src/Declarations/: CMakeLists.txt  dcl30-compliant.c  dcl30-noncompliant.c
code/stuff/CERT-C-Coding-Standard/test/src/Environment/: env30-noncompliant.c
code/stuff/CERT-C-Coding-Standard/test/src/FloatingPoint/: CMakeLists.txt  flp30-compliant.c
code/stuff/CERT-C-Coding-Standard/test/src/Integers/: int35-noncompliant.c
code/stuff/CERT-C-Coding-Standard/test/src/Memory/: mem33-storage-duration-noncompliant.c
code/stuff/CERT-C-Coding-Standard/test/src/Preprocessor/: CMakeLists.txt  pre31-compliant-2.c  pre31-noncompliant.c
