# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# + CMakeLists.txt
# + Folder: src/Environment
# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

ADD_EXECUTABLE( env30-noncompliant env30-noncompliant.c )
ADD_EXECUTABLE( env30-compliant-1 env30-compliant-1.c )
ADD_EXECUTABLE( env30-compliant-2 env30-compliant-2.c )
