# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# + CMakeLists.txt
# + Folder: src/Memory
# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

ADD_EXECUTABLE( mem33-storage-duration-noncompliant mem33-storage-duration-noncompliant.c )
ADD_EXECUTABLE( mem33-storage-duration-compliant mem33-storage-duration-compliant.c )

ADD_EXECUTABLE( mem33-copy-noncompliant mem33-copy-noncompliant.c )
ADD_EXECUTABLE( mem33-copy-compliant mem33-copy-compliant.c )

