# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# + CMakeLists.txt
# + Folder: src/Praktikum3
# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++


ADD_EXECUTABLE( mem31-compliant mem31-compliant.c )
ADD_EXECUTABLE( mem31-noncompliant mem31-noncompliant.c )
ADD_EXECUTABLE( exp37-noncompliant exp37-noncompliant.c)
ADD_EXECUTABLE( exp37-compliant exp37-compliant.c )
ADD_EXECUTABLE( int30-noncompliant int30-noncompliant.c)
ADD_EXECUTABLE( int30-compliant int30-compliant.c)
ADD_EXECUTABLE( int33-noncompliant int33-noncompliant.c)
ADD_EXECUTABLE( int33-compliant int33-compliant.c)