# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# + CMakeLists.txt
# + Folder: src/Praktikum3
# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++


ADD_EXECUTABLE( mem31-compliant mem31-compliant.c )
ADD_EXECUTABLE( mem31-noncompliant mem31-noncompliant.c )
ADD_EXECUTABLE( exp37-noncompliant exp37-noncompliant.c)
ADD_EXECUTABLE( exp37-compliant exp37-compliant.c )
ADD_EXECUTABLE( int30-noncompliant int30-noncompliant.c)
ADD_EXECUTABLE( int30-compliant int30-compliant.c)
ADD_EXECUTABLE( int33-noncompliant int33-noncompliant.c)
ADD_EXECUTABLE( int33-compliant int33-compliant.c)
ADD_EXECUTABLE( exp37-2-noncompliant exp37-2-noncompliant.c)
ADD_EXECUTABLE( exp37-2-compliant exp37-2-compliant.c )
ADD_EXECUTABLE( int30-2-noncompliant int30-2-noncompliant.c)
ADD_EXECUTABLE( int30-2-compliant int30-2-compliant.c)
ADD_EXECUTABLE( int33-2-noncompliant int33-2-noncompliant.c)
ADD_EXECUTABLE( int33-2-compliant int33-2-compliant.c)