# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# + CMakeLists.txt
# + Folder: src/Declarations
# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

ADD_EXECUTABLE( dcl30-noncompliant dcl30-noncompliant.c )
ADD_EXECUTABLE( dcl30-compliant dcl30-compliant.c )
