# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# + CMakeLists.txt
# + Folder: src/FloatingPoint
# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

ADD_EXECUTABLE( flp30-noncompliant flp30-noncompliant.c )
ADD_EXECUTABLE( flp30-compliant flp30-compliant.c )
