# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# + CMakeLists.txt
# + Folder: src/Preprocessor
# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

ADD_EXECUTABLE( pre31-noncompliant pre31-noncompliant.c )
ADD_EXECUTABLE( pre31-compliant-1 pre31-compliant-1.c )
ADD_EXECUTABLE( pre31-compliant-2 pre31-compliant-2.c )
